daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N27_bad_review_blind/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840c68f331c9c8e8245d60a49a7509e4633b27e84b10f6e8100d81325da1b6cd12e159d658a73c382f23890342d37c3f7288980f4581048596f504167e470bfd3ea
